Fixed layout issues, and a slight beautify

--- a/frontend/src/profile/ProfilePage.css
+++ b/frontend/src/profile/ProfilePage.css
@@ -30,7 +30,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 1%;
 }
 
 .group-post {
@@ -38,7 +38,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 1%;
 }
 
 .profile-title {
